--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,14 @@ pipeline {
                 
             }
         }
-    
+        
+     stage('Test') {
+            steps {
+                sh 'npm run test'
+                sh 'npm test -- --coverage'
+            }
+        }
+       
 
     
          stage ('zipping'){
