--- a/jenkinsfile
+++ b/jenkinsfile
@@ -55,7 +55,7 @@ pipeline {
             steps {
               withCredentials([file(credentialsId: 'angular-react-deployment-server', variable: 'deployment_server')]) {
                    sh 'scp -v -i ${deployment_server} build.zip ubuntu@18.224.182.74:/home/ubuntu'
-                   sh 'ssh -v -i ${deployment_server} ubuntu@18.224.182.74 "cd /home/ubuntu; unzip -o build.zip -d reactApp;pm2 start \"serve -p 7000 ." --name "reactapp""'
+                   sh 'ssh -v -i ${deployment_server} ubuntu@18.224.182.74 "cd /home/ubuntu; unzip -o build.zip -d reactApp;pm2 start \"serve -p 7000 .\" --name \"reactapp\""'
                   
                }
             }
